# luna-service2

./: .gitignore  CMakeLists.txt  README.md  desktop_hub.sh  valgrind.supp
conf/: CMakeLists.txt
doc/: Doxyfile.in
doc/examples/: simpleBiffService.schema
files/conf/: CMakeLists.txt  ls-private.conf.in  ls-public.conf.in
files/conf/pmlog/: ls-hub.conf.in
files/launch/: CMakeLists.txt  ls-hubd_private.conf.in  ls-hubd_private.in  ls-hubd_private_watchdog.in  ls-hubd_public.conf.in  ls-hubd_public.in  ls-hubd_public_watchdog.conf.in  ls-hubd_public_watchdog.in  ls-hubd_watchdog.conf  ls-hubd_watchdog.conf.in
files/pkgconfig/: luna-service2.pc.in
files/schema/: category.schema  generalResponse.schema  service.schema
files/scripts/internal/: create-role-file.sh  create-service-file.sh
files/scripts/public/: find-security-warnings.sh.in  ls-control.in  volatile_dir_control.py  volatile_dir_control_settings.py.in
files/sysbus/: com.palm.lunasend.json.prv.in  com.palm.lunasend.json.pub.in  com.palm.lunasendpub.json.pub.in  ls-monitor-pub.json.pub.in  ls-monitor.json.prv.in  ls-monitor.json.pub.in  ls-performance.json.pub.in  ls-performance.service.pub.in
include/: lunaservice-errors.h
include/private/: lserror_pbnjson.h  lunaservice-custom-priv.h  payload.hpp  simple_pbnjson.h
include/public/luna-service2/: lunaservice-errors.h  lunaservice-meta.h  lunaservice.h  lunaservice.hpp
include/public/luna-service2++/: call.hpp  error.hpp  handle.hpp  message.hpp  palm_service.hpp  payload.hpp  server_status.hpp  service.hpp  subscription.hpp
include/public/luna-service2/cxx/: call.hpp  error.hpp  message.hpp  palm_service.hpp  server_status.hpp  service.hpp
service/: LICENSE  com.palm.lunasend.json.pub  ls-monitor.json.prv  ls-monitor.json.pub
src/: CMakeLists.txt  base.c  callmap.c  clock.h  debug_methods.c  error.h  luna-service2.pc.in  mainloop.c  message.c  message.h  subscription.c  subscription.h  timersource.h  transport.c  transport.h  transport_channel.c  transport_client.h  transport_handlers.h  transport_incoming.c  transport_incoming.h  transport_message.c  transport_message.h  transport_outgoing.c  transport_security.c  transport_serial.h  transport_shm.c  transport_signal.h  utils.c  utils.h
src/hub/: CMakeLists.txt  conf.c  conf.h  hub.c  log.c  security.c  security.h
src/libluna-service2/: CMakeLists.txt  base.c  base.h  callmap.c  category.c  category.h  clock.c  clock.h  debug_methods.c  debug_methods.h  error.h  log.c  log.h  log_ids.h  lserror_pbnjson.c  lunaservice-custom-priv.h  mainloop.c  message.c  message.h  pmtrace_ls2.h  pmtrace_ls2_provider.c  pmtrace_ls2_provider.h  simple_pbnjson.c  subscription.c  subscription.h  timersource.c  timersource.h  transport.c  transport.h  transport_channel.c  transport_channel.h  transport_client.c  transport_client.h  transport_handlers.h  transport_incoming.c  transport_incoming.h  transport_message.c  transport_message.h  transport_outgoing.c  transport_outgoing.h  (+14 more)
src/libluna-service2++/: CMakeLists.txt  call.cpp  error.cpp  handle.cpp  message.cpp  palm_service.cpp  payload.cpp  server_status.cpp  service.cpp  subscription.cpp
src/libluna-service2++/performance/: CMakeLists.txt  ls-performance.cpp  ls-performance.hpp  ls_performance.conf
src/libluna-service2++/test/: CMakeLists.txt  bhv-3965-crash-svc.cpp  bhv-3965-crash.conf  bhv-3965-crash.cpp  category_notification.conf  category_notification.cpp  metainfo_example.conf  metainfo_example.cpp  test_call.conf  test_call.cpp  test_category.conf  test_category.cpp  test_client.conf  test_client.cpp  test_disconnection.conf  test_disconnection.cpp  test_example++.conf  test_example++.cpp  test_jsonpayload.cpp  test_service.conf  test_service.cpp  test_subscription_cxx.conf  test_subscription_cxx.cpp  util.cpp  util.hpp
src/libluna-service2/performance/: CMakeLists.txt
src/libluna-service2/test/: CMakeLists.txt  run_unit_tests  run_with_hub  test_base.c  test_callmap.c  test_clock.c  test_debug_methods.c  test_example.c  test_example.conf  test_mainloop.c  test_message.c  test_subscription.c  test_timersource.c  test_transport.c  test_transport_channel.c  test_transport_client.c  test_transport_incoming.c  test_transport_message.c  test_transport_outgoing.c  test_transport_security.c  test_transport_serial.c  test_transport_shm.c  test_transport_signal.c  test_transport_utils.c  test_utils.c
src/libluna-service2/test/cxx/: CMakeLists.txt  bhv-3965-crash-svc.cpp  category_notification.cpp  test_call.cpp  test_call_service.cpp  test_category.cpp  test_client.conf  test_client.cpp  test_error.cpp  util.hpp
src/ls-hubd/: CMakeLists.txt  conf.c  conf.h  hub.c  hub.h  log.c  log.h  pattern.c  pattern.h  security.c  security.h  watchdog.c  watchdog.h
src/ls-hubd/test/: CMakeLists.txt  test_directories_scan.c  test_pattern.c  test_security.c  volatile_dir_control_test.py
src/ls-hubd/test/steady/roles/: com.webos.bar.json  com.webos.foo.json  com.webos.foo1.json  steady.app1.json  steady.app2.json
src/ls-hubd/test/steady/services/: steady.service1.service  steady.service2.service  steady.service3.service  steady.service4.service
src/ls-hubd/test/volatile/roles/: volatile.app1.json  volatile.app2.json  volatile.app3.json  volatile.app4.json
src/ls-hubd/test/volatile/services/: volatile.service1.service  volatile.service2.service  volatile.service3.service  volatile.service4.service
src/ls-monitor/: CMakeLists.txt  monitor.c  monitor.h  monitor_queue.c  monitor_queue.h
src/luna-helper/: CMakeLists.txt  luna-helper.c
src/luna-send/: CMakeLists.txt  luna-send.c
src/monitor/: CMakeLists.txt  monitor.c  monitor.h  monitor_queue.c
src/utils/: CMakeLists.txt
upstart/: CMakeLists.txt  ls-hubd_private
utils/: create-role-file.sh  create-service-file.sh  find-security-warnings.sh  luna-helper.c  luna-send.c
